--- a/index.html
+++ b/index.html
@@ -3,9 +3,76 @@
 <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>New Year Party</title>
+
+        <!-- css file -->
+        <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-        
+        <!-- main body wrapper -->
+        <div class="body-container">
+
+        <!-- main slider -->
+        <div class="slider">
+                <h4>Happy New Year</h4>
+                <h2>New Year Party <br> Celebration</h2>
+        </div>
+
+        <!-- promotion -->
+        <div class="promo-section">
+                <h1></h1>
+                <h6></h6>
+                <h4></h4>
+                <div class="promo-banner"></div>
+        </div>
+
+        <!-- welcome banner -->
+        <div class="welcome-section">
+                <h2>Welcome to <br> midnight party</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta delectus veritatis ea deserunt pariatur error qui.</p>
+                <button>JOIN NOW</button>
+        </div>
+
+        <!-- portfolio section -->
+        <div class="portfolio-section">
+                <h5>THE BEST GIFTS</h5>
+                <h3>Our Awesome Portfolio</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat pariatur ea veritatis recusandae.</p>
+                <div class="portfolio-images">
+                        <div class="firstRowImages"></div>
+                        <div class="secondRowImages"></div>
+                </div>
+        </div>
+
+        <!-- newsletter section -->
+        <div class="newsletter-section">
+                <img src="" alt="">
+                <h3>Subscribe Newsletter</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste nulla impedit officia.</p>
+                <input type="email" placeholder="user@gmail.com" id="">
+                <input type="submit" value="">
+        </div>
+
+        </div>
+
+        <!-- footer section -->
+        <footer>
+                <div class="contact-info">
+                        <div class="address"></div>
+                        <div class="phone-number"></div>
+                </div>
+                <hr>
+                <div class="icons">
+                        <img src="" alt=""><a href="http://"></a></img>
+                        <img src="" alt=""><a href="http://"></a></img>
+                        <img src="" alt=""><a href="http://"></a></img>
+                        <img src="" alt=""><a href="http://"></a></img>
+                </div>
+                <hr>
+                <div class="rights">
+                        <h5>2017, All Rights Reserved.</h5>
+                        <a href="#">Unsubscribe</a>
+                </div>
+        </footer>
 </body>
 </html>
