--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 
         <!-- promotion -->
         <div class="promo-section">
-                <h1></h1>
-                <h6></h6>
-                <h4></h4>
-                <div class="promo-banner"></div>
+                <h1>65% OFF</h1>
+                <h6>OUR HOLIDAY DEALS ARE BETTER</h6>
+                <h4>ALL CATEGORIES</h4>
+                <img src="" alt="" class="promo-banner">
         </div>
 
         <!-- welcome banner -->
@@ -50,7 +50,7 @@
                 <h3>Subscribe Newsletter</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste nulla impedit officia.</p>
                 <input type="email" placeholder="user@gmail.com" id="">
-                <input type="submit" value="">
+                <input type="submit" value="Subscribe">
         </div>
 
         </div>
@@ -58,8 +58,11 @@
         <!-- footer section -->
         <footer>
                 <div class="contact-info">
-                        <div class="address"></div>
-                        <div class="phone-number"></div>
+                        <div class="address">44, Big Building Roosevelt Street <br> Beach Gardens Florida 33410</div>
+                        <div class="phone-number"><i class="fa-light fa-phone-volume"></i> +00 123 584 124
+                        <br>
+                        <i class="fa-light fa-globe"></i> www.website.com</div>
+
                 </div>
                 <hr>
                 <div class="icons">
