--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
         <!-- css file -->
         <link rel="stylesheet" href="styles/styles.css">
+
+         <!-- font-awesome -->
+         <script src="https://kit.fontawesome.com/fd6d7be253.js" crossorigin="anonymous"></script>
 </head>
 <body>
         <!-- main body wrapper -->
