--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>New Year Party</title>
 
+        <!-- google fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&display=swap" rel="stylesheet">
+
         <!-- css file -->
         <link rel="stylesheet" href="styles/styles.css">
 
@@ -17,8 +22,10 @@
 
         <!-- main slider -->
         <div class="slider">
+                <div class="slider-content">
                 <h4>Happy New Year</h4>
                 <h2>New Year Party <br> Celebration</h2>
+                </div>
         </div>
 
         <!-- promotion -->
