--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <!-- google fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800&family=Merriweather:wght@400;700;900&display=swap" rel="stylesheet">
 
         <!-- css file -->
         <link rel="stylesheet" href="styles/styles.css">
@@ -33,7 +33,7 @@
                 <h1>65% OFF</h1>
                 <h6>OUR HOLIDAY DEALS ARE BETTER</h6>
                 <h4>ALL CATEGORIES</h4>
-                <img src="" alt="" class="promo-banner">
+                <img src="images/New Year Photo.png" alt="">
         </div>
 
         <!-- welcome banner -->
