added welcome section

--- a/index.html
+++ b/index.html
@@ -38,9 +38,12 @@
 
         <!-- welcome banner -->
         <div class="welcome-section">
+                <div class="welcome-texts">
                 <h2>Welcome to <br> midnight party</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta delectus veritatis ea deserunt pariatur error qui.</p>
-                <button>JOIN NOW</button>
+                <p>We are gladly welcoming all the people with tickets to enjoy the greatest New Year Celebrations with us.</p>
+                <button class="btn">JOIN NOW</button>
+                </div>
+                <div class="img-2024"><img src="/images/Group 70.png" alt=""></div>
         </div>
 
         <!-- portfolio section -->
