added portfolio section

--- a/index.html
+++ b/index.html
@@ -50,10 +50,19 @@
         <div class="portfolio-section">
                 <h5>THE BEST GIFTS</h5>
                 <h3>Our Awesome Portfolio</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat pariatur ea veritatis recusandae.</p>
+                <p>Some of our recent works with all the details and customer review. We successfully full-filled all of our customers requirements. </p>
                 <div class="portfolio-images">
-                        <div class="firstRowImages"></div>
-                        <div class="secondRowImages"></div>
+                        <div class="firstRowImages">
+                                <img class= "portfolio-multi-images" src="/images/Rectangle 3.png" alt="">
+                                <img class= "portfolio-multi-images" src="/images/Rectangle 4.png" alt="">
+                                <img class= "portfolio-multi-images" class  = "portfolio-multi-images" src="/images/Rectangle 5.png" alt="">
+                        </div>
+                        <div class="secondRowImages">
+                                <img class= "portfolio-multi-images" src="/images/Rectangle 6.png" alt="">
+                                <img class= "portfolio-multi-images" src="/images/Rectangle 7.png" alt="">
+                                <img class= "portfolio-multi-images" src="/images/Rectangle 8.png" alt="">
+
+                        </div>
                 </div>
         </div>
 
