--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
 
         <!-- newsletter section -->
         <div class="newsletter-section">
-                <img src="" alt="">
+                <img src="/images/Group 61.png" alt="">
                 <h3>Subscribe Newsletter</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste nulla impedit officia.</p>
-                <input type="email" placeholder="user@gmail.com" id="">
-                <input type="submit" value="Subscribe">
+                <p>Subscribe to our newsletter to get all the update on time.</p>
+                <input class= "email" type="email" placeholder="user@gmail.com" id="email">
+                <input class= "submitt" type="submit" value="Subscribe">
         </div>
 
         </div>
